syntax = "proto3";

service Content {
    rpc Create (ContentCreateRequest) returns (ContentCreateResponse);
    rpc Delete (ContentDeleteRequest) returns (ContentDeleteResponse);
}

message ContentCreateRequest {
    string contentId = 1;
    string contentToken = 2;
    bytes content = 3;
    enum Type {
        UNKNOWN = 0;
        PICTURE = 1;
        VIDEO = 2;
    }
    Type type = 4;
}

message ContentCreateResponse {
    enum Status {
        UNKNOWN = 0;
        INVALID_PARAM = -1;
        SUCCESS = 1;
        INVALID_TOKEN = 2;
    }
    Status status = 1;
    string contentId = 2;
    string contentToken = 3;
}

message ContentDeleteRequest {
    string contentId = 1;
    string contentToken = 2;
}

message ContentDeleteResponse {
    enum Status {
        UNKNOWN = 0;
        INVALID_PARAM = -1;
        SUCCESS = 1;
        INVALID_TOKEN = 2;
    }
    Status status = 1;
}
